fixed everything else

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
         <title></title>
     </head>    
     <body>
-        <h1>21 Savage</h1>
-        
+        <h1>U7 Companions</h1>
+        <ul>
+            <li>Iolo</li>
+            <li>Shamino</li>
+            <li>Dupre</li>
+            <li>Jaana</li>
+            <li>Julia</li>
+            <li>Katrina</li>
+            <li>Sentri</li>
+            <li>Spark</li>
+            <li>Tseramed</li>
+        </ul>
         <span>Endpoint: https://companion.herokuapp.com/api/:name</span>
         
 
